--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,6 @@
+/* ------------------------ */
 /* General Styles  */
+/* ------------------------ */
 
 * {
   margin: 0;
@@ -19,23 +21,7 @@ html {
   margin: 0 auto;
 }
 
-/* Header Styles */
-
-header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(img/hero.jpg);
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
-
-.hero-text-box {
-  position: absolute;
-  width: 1140px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+/* Headings */
 
 h1 {
   margin-top: 0;
@@ -48,7 +34,7 @@ h1 {
   word-spacing: 4px;
 }
 
-/* Button Styles */
+/* Buttons */
 
 .btn:link,
 .btn:visited {
@@ -88,4 +74,24 @@ h1 {
 .btn-ghost:active {
   border: 1px solid #cf6d17;
   color: #fff;
+}
+
+/* ------------------------- */
+/* Header Styles */
+/* ------------------------- */
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(img/hero.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
