--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,19 @@ section {
   margin-bottom: 10px;
 }
 
+.icon-small {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+
+  /* align text and icons */
+  line-height: 120%;
+  vertical-align: middle;
+  margin-top: -8px;
+}
+
 /* Headings */
 
 h1,
@@ -101,6 +114,23 @@ h2:after {
 h3 {
   font-size: 110%;
   margin-bottom: 15px;
+}
+
+/* Links */
+
+a:link,
+a:visited {
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid #e67e22;
+  padding-bottom: 1px;
+  transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+  color: #555;
+  border-bottom: 1px solid transparent;
 }
 
 /* Buttons */
@@ -291,8 +321,27 @@ header {
   margin-right: 25px;
 }
 
+.btn-app:link,
+.btn-app:visited {
+  border: 0;
+}
+
 .btn-app img {
   height: 50px;
   width: auto;
   margin-right: 10px;
+}
+
+/* ------------------------ */
+/* Cities Styles  */
+/* ------------------------ */
+
+.box img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.city-feature {
+  margin-bottom: 5px;
 }
