--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,6 +184,7 @@ header {
     url(img/hero.jpg);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   height: 100vh;
 }
 
@@ -344,4 +345,46 @@ header {
 
 .city-feature {
   margin-bottom: 5px;
+}
+
+/* ------------------------ */
+/* Testimonials Styles  */
+/* ------------------------ */
+
+.section-testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(img/back-customers.jpg);
+  background-size: cover;
+  color: #fff;
+  background-attachment: fixed;
+}
+
+blockquote {
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+  position: relative;
+  margin-top: 40px;
+}
+
+blockquote:before {
+  content: "\201C";
+  font-size: 500%;
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+}
+
+cite {
+  display: block;
+  font-size: 90%;
+  margin-top: 25px;
+}
+
+cite img {
+  height: 80px;
+  border-radius: 50%;
+  margin-right: 10px;
+  vertical-align: middle;
 }
