--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -483,3 +483,82 @@ input[type="checkbox"] {
 *:focus {
   outline: none;
 }
+
+/* ------------------------ */
+/* Footer Styles  */
+/* ------------------------ */
+
+footer {
+  background-color: #333;
+  padding: 40px;
+  font-size: 80%;
+}
+
+.footer-nav {
+  list-style: none;
+  float: left;
+}
+
+.social-links {
+  list-style: none;
+  float: right;
+}
+
+.footer-nav li,
+.social-links li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+  margin: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+  text-decoration: none;
+  border: 0;
+  color: #888;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+  color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+  font-size: 170%;
+}
+
+.facebook-icon,
+.twitter-icon,
+.instagram-icon,
+.googleplus-icon {
+  transition: color 0.2s;
+}
+
+.facebook-icon:hover {
+  color: #3b5998;
+}
+
+.twitter-icon:hover {
+  color: #1da1f2;
+}
+
+.instagram-icon:hover {
+  color: #c32aa3;
+}
+
+.googleplus-icon:hover {
+  color: #db4437;
+}
+
+footer p {
+  color: #888;
+  text-align: center;
+  margin-top: 20px;
+}
