--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -68,9 +68,43 @@
     width: 100%;
     margin: 0 0 4% 0;
   }
+
+  .mobile-nav-icon,
+  .mobile-nav-icon-close {
+    display: inline-block;
+  }
   .main-nav {
     display: none;
+    float: left;
+    margin-top: 35px;
+    margin-left: 25px;
   }
+  .main-nav li {
+    display: block;
+  }
+  .main-nav li a:link,
+  .main-nav li a:visited {
+    display: block;
+    border: 0;
+    padding: 10px 0;
+    font-size: 100%;
+  }
+
+  .sticky .main-nav {
+    margin-top: 10px;
+  }
+
+  .sticky .main-nav li a:link,
+  .sticky .main-nav li a:visited {
+    padding: 10px 0;
+  }
+
+  .sticky .mobile-nav-icon,
+  .sticky .mobile-nav-icon-close {
+    margin-top: 10px;
+    color: #555;
+  }
+
   h1 {
     font-size: 180%;
   }
