--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 0 2%;
   }
+
   .row {
     padding: 0 2%;
   }
@@ -15,17 +16,19 @@
     font-size: 18px;
   }
   section {
-    padding: 60px;
+    padding: 60px 0;
   }
+
   .long-copy {
     width: 80%;
     margin-left: 10%;
   }
+
   .steps-box {
     margin-top: 10px;
   }
   .steps-box:last-child {
-    margin-left: 10%;
+    margin-top: 10%;
   }
   .works-step {
     margin-bottom: 40px;
@@ -33,17 +36,25 @@
   .works-step:last-of-type {
     margin-bottom: 60px;
   }
+
+  .app-screen {
+    width: 50%;
+  }
+
   .icon-small {
     width: 17px;
     margin-right: 5px;
   }
+
   .city-feature {
     font-size: 90%;
   }
+
   .plan-box {
     width: 100%;
     margin-left: 0%;
   }
+
   .plan-price {
     font-size: 250%;
   }
@@ -60,6 +71,7 @@
   section {
     padding: 30px 0;
   }
+
   .row,
   .hero-text-box {
     padding: 0 4%;
@@ -73,15 +85,18 @@
   .mobile-nav-icon-close {
     display: inline-block;
   }
+
   .main-nav {
     display: none;
     float: left;
     margin-top: 35px;
     margin-left: 25px;
   }
+
   .main-nav li {
     display: block;
   }
+
   .main-nav li a:link,
   .main-nav li a:visited {
     display: block;
@@ -111,9 +126,10 @@
   h2 {
     font-size: 150%;
   }
+
   .long-copy {
     width: 100%;
-    margin: 0%;
+    margin-left: 0%;
   }
   .app-screen {
     width: 40%;
@@ -133,6 +149,12 @@
   }
   .works-step:last-of-type {
     margin-bottom: 20px;
+  }
+
+  .footer-nav,
+  .social-links {
+    width: 100%;
+    text-align: center;
   }
 }
 
